ftw/blog/browser/stylesheets/blog.css
body.template-discussion_reply_form .documentActions {
    display:none;
}

.blogView {
    /*position: relative;*/
}
.blogView .rightColumn {
    top: 0;
    right: -20em;
}
.classificationItem {
    padding-left:1em;
}

#actionsBar, .actionsBar {
    background-color:#EFEFEF;
}

.blogView .actionsBarContent {
    border-bottom:1px solid #006FBA;
    border-right:1px solid #006FBA;
    border-left:1px solid #006FBA;
    padding:1em 1em 1.5em;
}

/* another exception for actionbar and edit menus */
.blogView .actionsBar {
    margin-top: -1em;
}
.blogView h1,
.blogView #dropdown-contentmenu {
    margin-left: 0 !important;
}

.blogView .leftColumn{
    width:70%;
    float:left;
}

.blogView .rightColumn{
    float:right;
    width:20%;
}

.blogColumns{
    clear:right;
}

